// file: pkg/metrics/proto/types/retention_policy_retentionpolicyconfig.proto
// version: 1.0.0
// guid: 123e4567-e89b-12d3-a456-426614174024

edition = "2023";

package gcommon.v1.metrics;

import "google/protobuf/duration.proto";

option go_package = "../../../../pkg/metrics/pb;metricspb";

/**
 * Retention policy configuration for metric data.
 */
message RetentionPolicyConfig {
  // How long to retain data
  google.protobuf.Duration duration = 1;

  // Storage tier configuration
  string storage_tier = 2;

  // Compression settings
  string compression = 3;
}
