// file: organization/proto/messages/integration_settings.proto
// version: 1.0.0
// guid: eb075ee2-2fa4-4809-a4b1-66199758b188

edition = "2023";

package gcommon.v1.organization;

import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/organization/proto";

message IntegrationSettings {
  // Enabled third-party integrations
  repeated Integration enabled_integrations = 1;

  // Webhook configuration for external notifications
  repeated WebhookConfig webhooks = 2;

  // API keys for external services
  repeated APIKeyConfig api_keys = 3 [lazy = true];

  // OAuth applications registered for this organization
  repeated OAuthAppConfig oauth_apps = 4;
}
